--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,8 +8,10 @@
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
-  position: relative;
+  position: center;
   overflow: hidden;
+  --ifm-hero-background-color: #ffffff;
+  --ifm-hero-text-color: #EE730C;
 }
 
 @media screen and (max-width: 966px) {
