--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,12 +6,12 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 2rem 0;
   text-align: center;
   position: center;
   overflow: hidden;
-  --ifm-hero-background-color: white;
-  --ifm-hero-text-color: var(--ifm-color-danger);
+  --ifm-hero-background-color: var(--ifm-color-primary);
+  --ifm-hero-text-color: var(--ifm-color-white);
 }
 
 @media screen and (max-width: 966px) {
