chore: search result styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -326,3 +326,8 @@ a:not([href]) {
 .hero__subtitle {
   font-size: 1.5rem;
 }
+
+mark {
+  color: white;
+  background: var(--ifm-color-danger);
+}
