chore: search result styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -334,7 +334,7 @@ a:not([href]) {
 }
 
 .searchResultItemSummary_5qSX {
-  color: unset;
+  color: black;
   font-style: italic;
   margin: .5rem 0 0;
 }
