fix: search class styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -327,17 +327,18 @@ a:not([href]) {
   font-size: 1.5rem;
 }
 
-.searchResultItem_18XW, a, h2 {
+.searchResultItem_18XW a,
+.searchResultItem_18XW h2 {
 /*  color: unset;*/
   color: var(--ifm-color-primary);
   font-size: unset;
 }
 
-.searchResultItemSummary_5qSX {
+/* .searchResultItemSummary_5qSX {
   color: black;
   font-style: italic;
   margin: .5rem 0 0;
-}
+} */
 
 mark {
   color: white;
