--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -54,6 +54,12 @@
   --ifm-link-hover-color: var(--ifm-link-color);
   --ifm-link-hover-decoration: underline;
   --ifm-footer-link-hover-color: var(--ifm-color-danger);
+
+  --ifm-navbar-height: 5rem;
+}
+
+.navbar__logo img {
+  height: 120%;
 }
 
 .docusaurus-highlight-code-line {
@@ -149,6 +155,32 @@ margin-bottom: var(--ifm-heading-margin-bottom);
   align-items: center;
   padding: 2rem;
   width: 100%;
+}
+
+.button {
+  background-color: var(--ifm-button-background-color);
+  border: var(--ifm-button-border-width) solid var(--ifm-button-border-color);
+  border-radius: var(--ifm-button-border-radius);
+  color: var(--ifm-button-color);
+  cursor: pointer;
+  display: inline-block;
+  font-size: calc(0.875rem * var(--ifm-button-size-multiplier));
+  font-weight: var(--ifm-button-font-weight);
+  line-height: 1.5;
+  padding: calc(
+      var(--ifm-button-padding-vertical) * var(--ifm-button-size-multiplier)
+    )
+    calc(
+      var(--ifm-button-padding-horizontal) * var(--ifm-button-size-multiplier)
+    );
+  text-align: center;
+  -webkit-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition-property: color, background, border-color;
+  transition-duration: var(--ifm-button-transition-duration);
+  transition-timing-function: var(--ifm-transition-timing-default);
 }
 
 .button--primary {
